example/lib/src/generated/errors/errors_localization_vi.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Vietnamese (`vi`).
class ErrorsLocalizationVi extends ErrorsLocalization {
  ErrorsLocalizationVi([String locale = 'vi']) : super(locale);

  @override
  String get error => 'Đã xảy ra lỗi';

  @override
  String get unexpectedError => 'Đã xảy ra lỗi bất ngờ';

  @override
  String get bugReportSentText => 'Báo cáo lỗi đã được gửi thành công.';
}
